# vidai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vidai.db
app/: config.py  main.py
app/api/v1/: router.py
app/configs/: config.py
app/consumers/: consumer.py  generate_video_consumer.py
app/controllers/: __init__.py
app/controllers/v1/: __init__.py  imagine.py  onboarding.py
app/entities/models/: image.py  user.py  video.py  video_generate.py
app/entities/payloads/requests/: generate_request.py  onboarding_request.py
app/entities/payloads/responses/: generate_response.py  onboarding_response.py  upload_image_response.py
app/enums/: generate_status.py
app/errors/: __init__.py  error.py  result.py
app/logic/generate/: activities.py  execution_data.py  generate_video.py  validate_image_url.py  workflow.py
app/repositories/: __init__.py  image.py  repository.py  user.py  video.py  video_generate.py
app/services/: __init__.py  generate_service.py  onboarding_service.py  upload_service.py
app/statemachine/: statemachine.py
app/subscribers/: generate_video_subscriber.py
app/toml/: service-config.docker.toml  service-config.example.toml
app/utils/: util.py
db/: create-ddl.sql
docker/: docker-compose.yml
